--- a/3_imputation.Rmd
+++ b/3_imputation.Rmd
@@ -41,13 +41,18 @@ alldata_birthorder = alldata_birthorder %>%
   select(-birthorder_uterus_alive, -birthorder_uterus_preg,
          -sibling_count_uterus_preg, -sibling_count_naive_ind, -sibling_count_uterus_alive,
          -words_immediate, -words_remembered_avg,
-         -Total_score_highest,-Total_score_highest_type, -Math_score_highest, -Math_score_highest_type,
-         -birthdate, -birthyear, -marriage_id, 
+         -Total_score_highest,-Total_score_highest_type, -Math_score_highest,
+         -Math_score_highest_type, -birthdate, -birthyear, -marriage_id, 
          -money_spent_smoking_log,-amount_still_smokers, -total_worked, -total_missed, 
-         -highest_education, -chron_order_birth, -alive, -death_yr, -death_month
+         -highest_education, -chron_order_birth, -alive, -death_yr, -death_month, -g_factor_early
          )
 alldata_birthorder = alldata_birthorder %>%
-  select(-pidlink)
+  select(-pidlink) %>%
+  mutate(currently_attending_school = as.integer(currently_attending_school),
+         attended_school = as.integer(attended_school),
+         )
+  
+
 corr_pipe = . %>%  as.matrix() %>% 
 Hmisc::rcorr(.) %>% {
   left_join(left_join(.$r %>% reshape2::melt() %>% rename(r = value), 
@@ -99,12 +104,68 @@ complete = function(...) { UseMethod("complete") }
 library(mice)
 library(miceadds)
 library(mitml)
-
+library(lattice)
+library(pan)
 
 sort(round(miss_frac(alldata_birthorder),2))
-skimr::skim(alldata_birthorder)
+# skimr::skim(alldata_birthorder)
 ```
 
+
+# test multi_level
+```{r}
+set.seed(123) # random seed so that other can replicate our imputation
+
+# look at the dataset
+head(alldata_birthorder)
+dim(alldata_birthorder)
+nrow(alldata_birthorder)
+ncol(alldata_birthorder)
+summary(alldata_birthorder)
+
+#look at the missing data pattern
+missingness_pattern = as.data.frame(md.pattern(alldata_birthorder))
+length(missingness_pattern)
+
+predictor_matrix = quickpred(alldatasm, mincor = 0.01)
+# predictor_matrix[, "mother_pidlink"] = 0
+# predictor_matrix["mother_pidlink", ] = 0
+
+# look if multilevel is needed: Do you think it is necessary to take the multilevel structure into account? YES! There is a strong cluster structure going on. If we ignore the clustering in our imputation model, we may run into invalid inference. To stay as close to the true data model, we must take the cluster structure into account during imputation. ((https://gerkovink.github.io/miceVignettes/Multi_level/Multi_level_data.html))
+
+alldata_birthorder$miss_frac_person = rowMeans(is.na(alldata_birthorder))
+qplot(alldata_birthorder$miss_frac_person)
+
+alldatasm <-  alldata_birthorder %>% arrange(miss_frac_person) %>% slice(1:200)
+qplot(alldatasm$miss_frac_person)
+
+alldata_birthorder$miss_frac_person <- NULL
+alldatasm$miss_frac_person <- NULL
+
+predictor_matrix = quickpred(alldatasm, mincor = 0.01) #all variables that correlate > .01
+
+# mother_pidlink is predicted by none of the other variables
+table(predictor_matrix["mother_pidlink", ] == 0)
+predictor_matrix["mother_pidlink",] = 0
+predictor_matrix[, "mother_pidlink"] = 0
+
+# mother_pidlink predicts 29 other variables
+table(predictor_matrix[, "mother_pidlink"] == 0)
+
+# to make the imputation possible, we exclude all "unimportant" variables from the imputation by mother_pidlink
+
+ini = mice(alldatasm, maxit = 0, predictorMatrix = predictor_matrix)
+pred <- ini$pred
+
+length(meth)
+meth
+meth = "norm"
+
+alldatasm_i = mice(alldatasm, m = 5, maxit = 10, predictorMatrix = predictor_matrix)
+
+
+plot(ini, c("riskB", "raven_2015_young", "birthorder_genes", "English_score_Junior_High", "years_of_education", "still_smoking"))
+```
 test
 ```{r}
 alldata_birthorder$miss_frac_person = rowMeans(is.na(alldata_birthorder))
@@ -123,7 +184,7 @@ alldatasm_i = mice(alldatasm, m = 5, maxit = 10, predictorMatrix = predictor_mat
 plot(alldatasm_i, c("riskB", "raven_2015_young", "birthorder_genes", "English_score_Junior_High", "Sector", "years_of_education", "still_smoking"))
 
 # check densities of imputed/real
-densityplot(alldatasm_i, ~ riskB)
+densityplot(ini, ~ riskB)
 densityplot(alldatasm_i, ~ years_of_education)
 densityplot(alldatasm_i, ~ birthorder_genes)
 densityplot(alldatasm_i, ~ g_factor_2015)
